--- a/Xtra-Blog/Views/Blog/Update.cshtml
+++ b/Xtra-Blog/Views/Blog/Update.cshtml
@@ -8,7 +8,7 @@
     <p style="font-size: 20px;">Current Image</p>
     <img src="~/img/@Model.ImageUrl" style="width:400px;height:400px;object-fit:cover" />
 </div>
-<form asp-action="create" asp-controller="blog" method="post" enctype="multipart/form-data">
+<form asp-action="update" asp-controller="blog" method="post" enctype="multipart/form-data">
     <div style="
               display: flex;
               align-items: start;
