--- a/Xtra-Blog/Views/_ViewImports.cshtml
+++ b/Xtra-Blog/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using XtraBlog
 @using XtraBlog.Models
 @using XtraBlog.ViewModels.Blog
+@using XtraBlog.ViewModels.Auth
+@using XtraBlog.Services.Interfaces
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
