--- a/Xtra-Blog/Views/Blog/Index.cshtml
+++ b/Xtra-Blog/Views/Blog/Index.cshtml
@@ -49,7 +49,7 @@
                 <span class="tm-color-primary">
                     @foreach (var blogTag in blog.BlogTags)
                     {
-                        @('#' + blogTag.Tag.Name)
+                        @('#' + blogTag.Tag.Name + " ")
                     }
                 </span>
                 @* CreatedAt *@
