--- a/Xtra-Blog/Views/Shared/_Layout.cshtml
+++ b/Xtra-Blog/Views/Shared/_Layout.cshtml
@@ -77,10 +77,10 @@
                                 Create Blog
                             </a>
                         </li>
-                        <li class="tm-nav-item @(title == "Create Tag" ? "active" : "")">
+                        <li class="tm-nav-item @(title == "Manage Tags" ? "active" : "")">
                             <a asp-action="create" asp-controller="tag" class="tm-nav-link ">
                                 <strong>#T</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                Create Tag
+                                Manage Tags
                             </a>
                         </li>
                     }
