--- a/Xtra-Blog/Views/Tag/Create.cshtml
+++ b/Xtra-Blog/Views/Tag/Create.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Create Tag";
+    ViewData["Title"] = "Manage Tags";
 }
 @model CreateTagVM
 
+<hr class="tm-hr-primary">
+<h1 class="tm-color-primary">Create New</h1>
 <form asp-action="create" asp-controller="tag" method="post" id="tagform">
     <label class="tm-color-primary" for="name" style="cursor:pointer">Name</label>
     <input class="form-control" id="name" asp-for="Name" style="width: 60%" />
@@ -10,3 +12,5 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 </form>
 <button class="tm-btn tm-btn-primary tm-btn-small" type="submit" style="margin-top: 30px" form="tagform">Create Tag</button>
+
+@await Component.InvokeAsync("Tag")
