--- a/Xtra-Blog/Views/Blog/Index.cshtml
+++ b/Xtra-Blog/Views/Blog/Index.cshtml
@@ -4,6 +4,11 @@
 }
 @model List<Blog>
 
+@if (Model.Count == 0)
+{
+    <h1>No blogs found :(</h1>
+    <p>Be the first one to @Html.ActionLink("Create a Blog.", "create", "blog")</p>
+}
 <div class="row tm-row">
     @* 6 posts *@
     @foreach (var blog in Model)
