--- a/Xtra-Blog/Views/Shared/Components/Tag/Default.cshtml
+++ b/Xtra-Blog/Views/Shared/Components/Tag/Default.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<Tag>
 
 <h1 class="tm-color-primary" style="margin:50px 0">Existing Tags</h1>
+
 <table class="table table-sm" style="width:60%;margin:50px 0">
     <thead>
         <tr>
@@ -9,15 +10,26 @@
             <th scope="col"></th>
         </tr>
     </thead>
-    <tbody >
+    <tbody>
+        @if (Model.Count == 0)
+        {
+            <tr>
+                <th scope="row">1</th>
+                <td>Not Found</td>
+                <td style="padding-left:38%">
+                </td>
+            </tr>
+        }
         @for (int i = 0; i < Model.Count; i++)
         {
             <tr>
                 <th scope="row">@(i + 1)</th>
                 <td>@Model[i].Name</td>
-                <td style="padding-left:38%">
+                <td style="display:flex;padding-left:70%;align-items:center;gap:5px">
                     <a class="btn btn-primary" asp-action="update" asp-controller="tag" asp-route-id="@Model[i].Id">Update</a>
-                    <a class="btn btn-danger" asp-action="delete" asp-controller="tag" asp-route-id="@Model[i].Id">Delete</a>
+                    <form asp-action="delete" asp-controller="tag" asp-route-id="@Model[i].Id" method="post">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
                 </td>
             </tr>
         }
