--- a/Xtra-Blog/Views/Blog/MyBlogs.cshtml
+++ b/Xtra-Blog/Views/Blog/MyBlogs.cshtml
@@ -7,7 +7,7 @@
 @if (Model.Count == 0)
 {
     <h1>No blogs found :(</h1>
-    <p>Be the first one to @Html.ActionLink("Create a Blog.", "create", "blog")</p>
+    <p>Go ahead, create your first @Html.ActionLink("Blog.", "create", "blog")</p>
 }
 <div class="row tm-row">
     @* 6 posts *@
